<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.mtjin.nomoneytrip.views.email_signup.EmailSignUpViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        tools:context=".views.email_signup.EmailSignUpActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:fontFamily="@font/goyang_ilsan_regular"
            android:text="@string/email_signup_text"
            android:textColor="@color/colorBlack2D2D"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_80dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/padding_20dp"
            android:singleLine="true"
            android:text="@={vm.email}"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:hint="@string/pw_signip_input_hint"
            android:paddingBottom="@dimen/padding_20dp"
            android:singleLine="true"
            android:text="@={vm.pw}"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pw_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:hint="@string/pw_confirm_hint"
            android:paddingBottom="@dimen/padding_20dp"
            android:singleLine="true"
            android:text="@={vm.pwConfirm}"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintTop_toBottomOf="@id/et_pw" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iv_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:background="@drawable/bg_btn_normal_orange_radius_8dp"
            android:gravity="center"
            android:onClick="@{()->vm.onSignUpClick()}"
            android:text="@string/sign_up_then_start_text"
            android:textColor="@color/colorWhiteFDFD"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pw_confirm" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{vm.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>