<resources>
    <string name="app_name">무전일기</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="tmap_key">l7xxb33343042e394ae68af011ca74411a30</string>
    <string name="kakao_app_key">541c8caff279c6e6019cd20dde7951d5</string>
    <string name="kakao_scheme">kakao541c8caff279c6e6019cd20dde7951d5</string>
    <string name="kakao_link">kakaolink.com</string>
    <string name="tour_api_key">GU7pI9Qe5kD1WOmPjAuxSGYzbLGkUJXMnQmy8EyV18c%2FdMkdvBBO1gpgrNoX30AOF%2FyKVxQkdZ45c7hMLOBfzQ%3D%3D</string>

    <string name="bottom_navi_test1">홈</string>
    <string name="bottom_navi_text2">여행기</string>
    <string name="bottom_navi_text3">예약내역</string>
    <string name="bottom_navi_text4">프로필</string>
    <string name="email_input_hint">이메일 주소 입력</string>
    <string name="email_login_text">이메일로 로그인</string>
    <string name="email_signup_text">이메일로 회원가입</string>
    <string name="pw_input_hint">비밀번호 입력</string>
    <string name="pw_signip_input_hint">비밀번호 입력</string>
    <string name="pw_confirm_hint">비밀번호 확인</string>
    <string name="volunteer_time_accept_text">봉사시간 인정</string>
    <string name="near_tour_info_text">근처 여행 정보</string>
    <string name="write_tour_text">무전일기 남기기</string>
    <string name="write_text">게시하기</string>
    <string name="how_tour_question_text">어떤 여행을 다녀오셨나요? 숨겨진 국내 여행 팁을 나눠주세요.</string>
    <string name="travel_history_text">다녀온 여행지</string>
    <string name="lodgment_date_text">숙박 날짜</string>
    <string name="my_tour_diary_text">내 여행기</string>
    <string name="saved_tour_diary_text">저장한 여행기</string>
    <string name="lodgement_info_text">숙소 정보</string>
    <string name="address_text">주소</string>
    <string name="telephone_text">전화</string>
    <string name="homepage_text">홈페이지</string>
    <string name="facility_text">편의시설</string>
    <string name="housing_policy_text">숙소정책</string>
    <string name="check_in_text">체크인</string>
    <string name="service_time_certification_text">봉사시간인증</string>
    <string name="server_time_certification_info_text">일손 시간 만큼 봉사시간 인증 가능합니다. 여행 후 구매내역 페이지에서 접수할 수 있습니다.</string>
    <string name="reservation_confirm_text">예약 확인</string>
    <string name="total_people_num_text">인원수</string>
    <string name="select_option_text">선택 옵션</string>
    <string name="purchase_info_text">결재 정보</string>
    <string name="total_purchase_text">총 결재금액</string>
    <string name="total_service_time_text">총 일손시간</string>
    <string name="free_cancel_available_time_text">무료 취소 가능</string>
    <string name="free_cancel_rule_text">이후 예약을 취소할 경우 전액 취소 수수료 또는 이용 패널티가 부과될 수 있습니다.</string>
    <string name="consent_use_text">이용 동의</string>
    <string name="consent_rule_text"><b>취소 / 이용규정</b>, <b>개인 정보 수집 / 이용 방침</b> 및 <b>개인정보 제 3자 제공</b>을 모두 읽었으며 이 에 동의합니다.</string>
    <string name="personnel_text">인원</string>
    <string name="more_option_text">추가 옵션</string>
    <string name="search_local_name_text">지역 이름으로 검색</string>
    <string name="profile_revise_text">프로필 수정</string>
    <string name="my_tour_text">내 여행기</string>
    <string name="save_tour_text">저장한 여행기</string>
    <string name="lee_thank_letter_text">이장님의 감사편지</string>
    <string name="enter_reservation_info_text">예약 정보 입력</string>
    <string name="my_page_text">마이페이지</string>
    <string name="modify_complete_text">수정 완료</string>
    <string name="local_city_name_search_hint">지역, 마을 이름으로 검색</string>
    <string name="free_lodgment_text">무전숙박</string>
    <string name="no_free_lodgment_text">유료숙박</string>
    <string name="reservation_completed_text">예약이 \n완료되었습니다.</string>
    <string name="no_text">아니요</string>
    <string name="yes_text">네</string>
    <string name="alarm_text">알림</string>
    <string name="order_by_text">정렬</string>
    <string name="order_by_recmmend_text">추천순</string>
    <string name="order_by_review_text">리뷰순</string>
    <string name="order_by_save_text">저장순</string>
    <string name="order_by_low_price_text">가격 낮은순</string>
    <string name="order_by_high_price_text">가격 높은순</string>
    <string name="report_text">신고하기</string>
    <string name="sign_up_then_start_text">회원가입하고 시작</string>
    <string name="login_text">로그인</string>
    <string name="seoul_text">서울</string>
    <string name="local_tour_lodge_text">국내 여행지</string>
    <string name="incheon_text">인천</string>
    <string name="daejeon_text">대전</string>
    <string name="daegu_text">대구</string>
    <string name="gwangju_text">광주</string>
    <string name="busan_text">부산</string>
    <string name="ulsan_text">울산</string>
    <string name="sejong_text">세종</string>
    <string name="gyeungi_text">경기</string>
    <string name="kangwon_text">강원</string>
    <string name="choongbuk_text">충북</string>
    <string name="choongnam_text">충남</string>
    <string name="gyungbuk_text">경북</string>
    <string name="gyungnam_text">경남</string>
    <string name="jeonbuk_text">전북</string>
    <string name="jeonnam_text">전남</string>
    <string name="jeju_text">제주</string>
    <string name="nomoney_tour_local_text">무전여행지</string>
    <string name="healing_tour_local_text">힐링 관광지</string>
    <string name="local_restaurant_text">본토 음식점</string>
    <string name="input_content_text">내용을 입력해주세요</string>
    <string name="enter_email_text">이메일을 입력해주세요</string>
    <string name="enter_password_text">비밀번호를 입력해주세요</string>
    <string name="enter_password_confirm_text">비밀번호 확인을 입력해주세요</string>
    <string name="password_confirm_not_same_text">비밀번호가 일치하지 않습니다.</string>
    <string name="next_text">다음</string>
    <string name="tour_write_text">여행기 작성</string>
    <string name="go_home_text">홈으로</string>
    <string name="reserve_text">예약하기</string>
    <string name="reservation_explanation_text">희망 봉사활동과 다른 봉사를 진행할 수 있으며 일정은 예약 확정 후 예약내역에서 확인하실 수 있습니다.</string>
    <string name="num_one_text">1</string>
    <string name="no_money_diary_text">무전일기</string>
    <string name="please_install_tmap_msg">Tmap(티맵)을 설치해주셔야 기능을 사용할 수 있습니다.</string>
    <string name="num_unit_text">명</string>
    <string name="please_consent_msg">이용 동의를 해주세요</string>
    <string name="reservation_fail_msg">예약을 실패했습니다.</string>
    <string name="see_reservation_detail_text">예약 상세 보기</string>
    <string name="reservation_complete_notice_text">예약이 확정되면 알림을 제공합니다.\n 알림은 푸시알림 동의가 있어야 제공됩니다..</string>
    <string name="reservation_complete_text">무전숙박 예약 신청이\n 완료되었습니다.</string>
    <string name="reservation_hisotry_text">예약 내역</string>
    <string name="reservation_cancel_success_msg">예약이 취소되었습니다.</string>
    <string name="reservation_cancel_fail_tmsg">예약취소를 실패하였습니다.</string>
    <string name="no_product_yet_text">아직 예약하신 상품이 없습니다.</string>
    <string name="date_can_not_selected_msg">해당 날짜는 선택할 수 없습니다.</string>
    <string name="duplicate_date_select_another_date_msg">해당 날짜에 예약이 있습니다. 다른 날짜를 선택해주세요</string>
    <string name="tour_write_question_hint">여행은 어떠셨나요?\n숨겨진 국내 여행 팁을 나눠주세요.</string>
    <string name="please_upload_image_msg">이미지를 업로드해주세요</string>
    <string name="tour_write_upload_fail_msg">작성물 게시를 실패했습니다</string>
    <string name="tour_write_letter_fail_msg">감사편지 작성을 실패했습니다</string>
    <string name="tour_no_history_recommend_text">다녀온 여행지가 없습니다.\n인기있는 무전 여행을 추천해드릴게요.</string>
    <string name="where_to_go_no_money_trip_question_text">무전여행\n어디로 가볼까요?</string>
    <string name="profile_edit_success_msg">프로필 수정 완료</string>
    <string name="profile_edit_fail_msg">프로필 수정 실패</string>
    <string name="duplicate_name_exist_msg">중복 이름 존재</string>
    <string name="name_blank_msg">이름 공백</string>
    <string name="profile_edit_text">프로필 수정</string>
    <string name="tour_history_question_text">어떤 여행을 다녀오셨나요?\n다녀온 여행지를 선택해주세요.</string>
    <string name="local_popular_review_text">이 지역 인기 여행기</string>
    <string name="aleready_reviewed_product_msg">이미 리뷰를 남긴 상품입니다.</string>
    <string name="local_tour_review_more_text">이 지역 여행기 더 보기</string>
    <string name="rating_then_next_text">평가를 하면 다음으로 넘어갑니다.</string>
    <string name="update_later_text">업데이트 예정</string>
    <string name="teen_tour_text">청춘 여행기</string>
    <string name="country_entire_text">국내 전체</string>
    <string name="self_auth_text">본인 인증</string>
    <string name="need_self_auth_for_app_text">무전 여행을 위해 본인 인증이 필요합니다.</string>
    <string name="name_text">이름</string>
    <string name="enter_phone_text">휴대전화번호 (예시 1012345678)</string>
    <string name="auth_request_text">인증요청</string>
    <string name="try_auth_text">인증하기</string>
    <string name="retry_request_auth_phone_text">인증 번호 재전송</string>
    <string name="please_enter_phone_err">전화번호를 입력해주세요</string>
    <string name="enter_auth_num_text">인증 번호 입력</string>
    <string name="sign_up_text">회원가입</string>
    <string name="master_login_text">이장님 로그인</string>
    <string name="enter_id_text">아이디 입력</string>
    <string name="reservation_cancel_text">예약 취소</string>
    <string name="reservation_approval_text">예약 승인</string>
    <string name="setting_text">설정</string>
    <string name="alarm_receive_agree_text">알람 수신 동의</string>
    <string name="app_info_text">앱 정보</string>
    <string name="app_rule_text">이용약관</string>
    <string name="app_personal_info_text">개인정보 처리방침</string>
    <string name="location_info_text">위치정보 이용약관</string>
    <string name="logout_text">로그아웃</string>
    <string name="delete_auth_text">회원탈퇴</string>
    <string name="lodgment_info_text">숙소 정보</string>
    <string name="hope_volunteer_text">희망 봉사</string>
    <string name="reservation_detail_history_text">예약 상세 내역</string>
    <string name="per_day_text">1박 기준</string>
    <string name="search_road_text">길찾기</string>
    <string name="check_out_text">체크아웃</string>
    <string name="welcom_no_money_trip_text">무전일기에 오신 것을 환영합니다~~</string>
    <string name="app_operator_text">운영진</string>
    <string name="app_current_version_text">현재 버전</string>
    <string name="saved_tours_text">저장한 여행</string>
    <string name="recommend_post_text">추천한 게시물</string>
    <string name="no_recommend_post_text">추천하신 게시물이 없습니다.</string>
    <string name="app_delete__user_auth_text">탈퇴하기</string>
    <string name="not_delete_auth_text">지켜보기</string>
    <string name="reservation_info_check_text">예약 정보 확인</string>
    <string name="reservation_accepted_text">예약 접수</string>
    <string name="already_send_letter_text">이미 감사편지를 보냈습니다.</string>
    <string name="please_write_thanks_letter_hint">50자 이내로 감사편지 작성해주세요</string>
    <string name="write2_text">작성하기</string>
    <string name="thanks_letter_complete_msg">감사편지 작성 완료</string>
    <string name="no_tour_community_text">이 지역에 아직 여행기가 없습니다.</string>
    <string name="last_tour_history_msg">마지막 여행기입니다.</string>
    <string name="this_product_review_more_text">이 상품 여행기 더보기</string>
    <string name="update_later_msg">추후 업데이트</string>
    <string name="login_success_msg">로그인 성공</string>
    <string name="login_fail_msg">로그인 실패</string>
    <string name="error_excution_msg">오류가 발생했습니다</string>
    <string name="kakao_link_fail_msg">카카오링크 실패</string>
</resources>
